<resources>
    <string name="app_name">Auto Triage</string>
    <string name="nachname">Nachname</string>
    <string name="vorname">Vorname</string>
    <string name="geburtstag">Geburtstag</string>
    <string name="größe">Größe</string>
    <string name="geschlecht">Geschlecht</string>
    <string name="gewicht">Gewicht</string>
    <string name="meinedaten">Meine Daten</string>
    <string name="weight">Gewicht</string>
    <string name="gender">Geschlecht</string>
    <string name="height">Größe</string>
    <string name="birthday">Geburtstag</string>
    <string name="last_name">Nachname</string>
    <string name="first_name">Vorname</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="my_profile_btn">Meine Daten</string>
    <string name="my_profile_title">Meine Daten</string>
    <string name="email">Email</string>
    <string name="language">Sprache</string>
    <string name="questionnaireBTNSTR">Fragebogen</string>
    <string name="evaliuationBTNSTR">Triage SK</string>
    <string name="standortTxt">Dein Standort ist uns wichtig.</string>
    <string name="remember_words">"Bitte merken sie sich diese drei Wörter."</string>
    <string name="eval_mental_state">Bewusstseinszustand</string>
    <string name="is_patient_walking">Gehfähigkeit</string>
    <string name="is_patient_moving">Beweglichkeit</string>
    <string name="eval_heart_rate_txt">Atemfrequenz (Atemzüge pro Minute)</string>
    <string name="tag_color_deceased">Black</string>
    <string name="tag_color_immediate">Red</string>
    <string name="tag_color_delayed">Yellow</string>
    <string name="tag_color_normal">Green</string>
    <string name="welcome_msg">Willkommen bei Health Wearable</string>
    <string name="startBtnText">Los geht`s!</string>
    <string name="title_activity_simulation_settings">Simulation Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="contentDescription">Some Image?</string>
    <string name="repeat_question">Wenn Sie diese Frage wiederholen wolen, sagen sie bitte "noch einmal".</string>
    <string name="answer_repeat_question">noch einam</string>
    <string name="next_question">Wenn Sie zur nächsten Aufgabe weiter gehen wollen, sagen Sie bitte "weiter"</string>
    <string name="answer_next_question">weiter</string>
    <string name="what_year_question">Welches Jahr haben wir denn heute?</string>
    <string name="what_day_question">Welcher Wochentag ist Heute</string>
    <string name="what_month_question">Welcher Monat ist es?</string>
    <string name="repeat_words_please">Bitte wiederholen Sie die 3 Wörter von vorher!!!</string>
    <string-array name="language_array">
        <item>Englisch</item>
        <item>Deutsch</item>
    </string-array>
    <string-array name="gender_array">
        <item>Abimegender</item>

        <item>Adamasgender</item>

        <item>Aerogender</item>

        <item>Aesthetigender</item>

        <item>Affectugender</item>

        <item>Agender</item>

        <item>Agenderflux</item>

        <item>Alexigender</item>

        <item>Aliusgender</item>

        <item>Amaregender</item>

        <item>Ambigender</item>

        <item>Ambonec</item>

        <item>Amicagender</item>

        <item>Androgyne</item>

        <item>Anesigender</item>

        <item>Angenital</item>

        <item>Anogender</item>

        <item>Anongender</item>

        <item>Antegender</item>

        <item>Anxiegender</item>

        <item>Apagender</item>

        <item>Apconsugender</item>

        <item>Astergender</item>

        <item>Astralgender</item>

        <item>Autigender</item>

        <item>Autogender</item>

        <item>Axigender</item>

        <item>Bigender</item>

        <item>Biogender</item>

        <item>Blurgender</item>

        <item>Boyflux</item>

        <item>Burstgender</item>

        <item>Caelgender</item>

        <item>Cassgender</item>

        <item>Cassflux</item>

        <item>Cavusgender</item>

        <item>Cendgender</item>

        <item>Ceterofluid</item>

        <item>Ceterogender</item>

        <item>Cisgender</item>

        <item>Cloudgender</item>

        <item>Collgender</item>

        <item>Colorgender</item>

        <item>Commogender</item>

        <item>Condigender</item>

        <item>Deliciagender</item>

        <item>Demifluid</item>

        <item>Demiflux</item>

        <item>Demigender</item>

        <item>Domgender</item>

        <item>Demi-vapor </item>

        <item>Demi-smoke </item>

        <item>Duragender</item>

        <item>Egogender</item>

        <item>Epicene</item>

        <item>Espigender</item>

        <item>Exgender</item>

        <item>Existigender</item>

        <item>Female</item>

        <item>Femfluid</item>

        <item>Femgender</item>

        <item>Fluidflux</item>

        <item>Gemigender</item>

        <item>Genderblank</item>

        <item>Genderflow</item>

        <item>Genderfluid</item>

        <item>Genderflux</item>

        <item>Genderfuzz</item>

        <item>Gender Neutral</item>

        <item>Genderpunk</item>

        <item>Genderqueer</item>

        <item>Genderwitched</item>

        <item>Girlflux</item>

        <item>Glassgender</item>

        <item>Glimragender</item>

        <item>Greygender</item>

        <item>Gyragender</item>

        <item>Healgender</item>

        <item>Heliogender</item>

        <item>Hemigender</item>

        <item>Horogender</item>

        <item>Hydrogender</item>

        <item>Imperigender</item>

        <item>Intergender</item>

        <item>Juxera</item>

        <item>Libragender</item>

        <item>Male</item>

        <item>Magigender</item>

        <item>Mascfluid</item>

        <item>Mascgender</item>

        <item>Maverique</item>

        <item>Mirrorgender</item>

        <item>Molligender</item>

        <item>Multigender</item>

        <item>Nanogender</item>

        <item>Neutrois</item>

        <item>Nonbinary</item>

        <item>Omnigender</item>

        <item>Oneirogender</item>

        <item>Pangender</item>

        <item>Paragender</item>

        <item>Perigender</item>

        <item>Polygender</item>

        <item>Proxvir</item>

        <item>Quoigender</item>

        <item>Subgender</item>

        <item>Surgender</item>

        <item>Systemgender</item>

        <item>Tragender</item>

        <item>Transgender</item>

        <item>Transneutral</item>

        <item>Trigender</item>

        <item>Vapogender</item>

        <item>Venngender</item>

        <item>Verangender</item>

        <item>Vibragender</item>

        <item>Vocigender</item>
    </string-array>
    <string name="random_word1">"Die Zeit"</string>
    <string name="random_word2">"Der Mann"</string>
    <string name="random_word3">"Die Hand"</string>
    <string name="random_word4">"Der Tag"</string>
    <string name="random_word5">"Der Weg"</string>
    <string name="random_word6">"Das Auge"</string>
    <string name="random_word7">"Das Ding"</string>
    <string name="random_word8">"Der Kopf"</string>
    <string name="random_word9">"Das Jahr"</string>
    <string name="random_word10">"Das Zimmer"</string>
    <string name="random_word11">"Die Tür"</string>
    <string name="random_word12">"Die Frau"</string>
    <string name="random_word13">"Das Gesicht"</string>
    <string name="random_word14">"Die Mutter"</string>
    <string name="random_word15">"Das Volk"</string>
    <string name="random_word16">"Die Nacht"</string>
    <string name="random_word17">"Das Haus"</string>
    <string name="random_word18">"Der Vater"</string>
    <string name="random_word19">"Das Leben"</string>
    <string name="random_word20">"Der Rücken"</string>
    <string name="random_word21">"Die Stimme"</string>
    <string name="random_word22">"Das Mädchen"</string>
    <string name="random_word23">"Der Ort"</string>
    <string name="random_word24">"Der Junge"</string>
    <string name="random_word25">"Das Auto"</string>
    <string name="random_word26">"Die Seite"</string>
    <string name="random_word27">"Der Arm"</string>
    <string name="random_word28">"Das Kind"</string>
    <string name="random_word29">"Das Wort"</string>
    <string name="random_word30">"Der Moment"</string>
    <string name="random_word31">"Das Haar"</string>
    <string name="random_word32">"Der Fuß"</string>
    <string name="random_word33">"Das Wasser"</string>
    <string name="random_word34">"Das Licht"</string>
    <string name="random_word35">"Die Welt"</string>
    <string name="random_word36">"Der Name"</string>
    <string name="random_word37">"Der Freund"</string>
    <string name="random_word38">"Das Fenster"</string>
    <string name="random_word39">"Der Körper"</string>
    <string name="random_word40">"Der Tisch"</string>
    <string name="random_word41">"Der Morgen"</string>
    <string name="random_word42">"Das Bett"</string>
    <string name="random_word43">"Die Mauer"</string>
    <string name="random_word44">"Die Straße"</string>
    <string name="random_word45">"Die Schule"</string>
    <string name="random_word46">"Die Luft"</string>
    <string name="random_word47">"Der Boden"</string>
    <string name="random_word48">"Die Stunde"</string>
    <string name="random_word49">"Das Ende"</string>
    <string name="random_word50">"Die Familie"</string>
    <string name="random_word51">"Der Kerl"</string>
    <string name="random_word52">"Die Art"</string>
    <string name="random_word53">"Die Minute"</string>
    <string name="random_word54">"Die Geschichte"</string>
    <string name="random_word55">"Der Gott"</string>
    <string name="eval_rr_txt">Pulsfrequenz  (Schläge pro Minute)</string>
    <string name="menue_btn_txt">Menü</string>
</resources>