<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/walkingCheckBox3"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/is_patient_walking"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movementCheckBox" />

    <CheckBox
        android:id="@+id/movementCheckBox"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/is_patient_moving"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msCheckBox" />


    <CheckBox
        android:id="@+id/msCheckBox"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="Mental State"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="HardcodedText" />

    <SeekBar
        android:id="@+id/HRseekBar"

        style="@android:style/Widget.Material.SeekBar.Discrete"
        android:layout_width="341dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:max="200"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <SeekBar
        android:id="@+id/RRseekBar"
        style="@android:style/Widget.Material.SeekBar.Discrete"
        android:layout_width="345dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="50"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/eval_heart_rate_txt"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walkingCheckBox3"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:defaultFocusHighlightEnabled="false"
        android:focusedByDefault="false"
        android:text="@string/eval_rr_txt"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HRseekBar"
        tools:ignore="HardcodedText,UnusedAttribute" />

    <TextView
        android:id="@+id/RRTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="9999"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/HRTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="9999"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/RRtag"
        android:layout_width="77dp"
        android:layout_height="32dp"
        android:text="TextView"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/RRTextView"
        app:layout_constraintTop_toTopOf="@+id/RRTextView" />

    <TextView
        android:id="@+id/HRtag"
        android:layout_width="77dp"
        android:layout_height="28dp"
        android:text="TextView"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/HRTextView"
        app:layout_constraintTop_toTopOf="@+id/HRTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="Erfasste Kenndaten"
        android:textAppearance="@style/ProfileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PersonalTAG"
        android:layout_width="318dp"
        android:layout_height="98dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HRseekBar"
        app:layout_constraintVertical_bias="0.644" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="Anzahl richtige Antworten:"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/msCheckBox"
        app:layout_constraintTop_toTopOf="@+id/msCheckBox" />

    <TextView
        android:id="@+id/correctTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="menuEvaluationButtonEventHandler"
        android:text="@string/menue_btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
